fix(contact): adjust the position of the left element for better alignment

--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -1,10 +1,10 @@
 .contact {
   &__left {
     position: sticky;
-    top: 5%;
+    top: 20%;
 
     @media (width <= 884px) {
-      top: 3%;
+      top: 5%;
     }
 
     @media (width <= 640px) {
